deploy scripts added to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://Ashquinn.github.io/react_portfolio",
-  "name": "react_portfolio",
+  "homepage": "https://Ashquinn.github.io/react_portfolio1",
+  "name": "react_portfolio1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
